# salary-benchmark-arcium

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  package.json
app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  WalletProvider.tsx  arcium.ts  config.ts  main.tsx  salary_benchmark.json  salary_benchmark.ts  styles.css
artifacts/: circuits_hash.txt  docker-compose-arx-env.yml  recovery_node_config_2.toml  recovery_node_config_3.toml  recovery_node_config_4.toml  recovery_node_config_5.toml  recovery_node_config_6.toml
artifacts/localnet/: identity_0.pem  identity_1.pem  identity_2.pem  identity_3.pem  identity_4.pem  identity_5.pem  identity_6.pem  node_0.json  node_1.json  node_2.json  node_3.json  node_bls_0.json  node_bls_1.json  node_bls_2.json  node_bls_3.json  node_bls_4.json  node_bls_5.json  node_bls_6.json  node_callback_0.json  node_callback_1.json  node_callback_2.json  node_callback_3.json  node_callback_4.json  node_callback_5.json  node_callback_6.json  node_x25519_0.json  node_x25519_1.json  node_x25519_2.json  node_x25519_4.json  node_x25519_6.json  recovery_node_4.json  recovery_node_5.json  recovery_node_6.json  recovery_node_x25519_3.json  recovery_node_x25519_5.json  td_identity.pem  td_master_seed.json
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/salary-benchmark/: Cargo.toml
programs/salary-benchmark/src/: lib.rs
scripts/: setup-devnet.ts
tests/: salary_benchmark.ts
